
[metadata]
name = DeepMSI
version = 0.0
description = Python package of deep learning methods for MSI classification and clustering.
long_description = file: README.md

# Project info
url = https://github.com/DanGuo1223/DeepMSI
project_urls = Source Code = https://github.com/DanGuo1223/DeepMSI Bug Tracker = https://github.com/DanGuo1223/DeepMSI/issues

# Author info
author = Dan Guo
author_email = guo.dan@northeastern.edu

# License
license = MIT
license_file = LICENSE


classifiers =
    Development Status :: 3 - ALPHA
    LICENSE :: OSI Approved :: MIT LICENSE
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    
keywords = 
    mass spectrometry imaging
    clustering
    classification

[options]
install_requires = 
    pandas
    matplotlib
    numpy
    torch

# Where is my code
packages = find:
package_dir =
    = src
    
[options.packages.find]
where = src